# blot

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  conanfile.py  conanfile.txt  logger.hpp  main.cpp
.githooks/: commit-msg
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml  cmake-single-platform.yml
cmake/: conan-optimistic-gcc-profile  utils.cmake
include/blot/: assembly.hpp  blot.hpp  ccj.hpp  compile_command.hpp  infer.hpp  jsonrpc.hpp  logger.hpp
include/bolt/: bolt.hpp
src/blot/: assembly.cpp  assembly.hpp  ccj.cpp  main.cpp  options.cpp  options.hpp  session.cpp  session.hpp  stdio.cpp  stdio.hpp  web.cpp  web.hpp  web_config.hpp.in  web_handlers.cpp  web_server.cpp  web_server.hpp
src/bolt/: assembly.cpp  assembly.hpp  ccj.cpp  ccj.hpp  main.cpp  options.cpp  options.hpp
src/cli/: main.cpp  options.cpp  options.hpp
src/jsonrpc_server/: main.cpp
src/libblot/: assembly.cpp  auto.hpp  blot.cpp  ccj.cpp  infer.cpp  json_helpers.hpp  jsonrpc.cpp  linespan.hpp  logger.hpp  utils.hpp
src/server/: session.cpp  session.hpp  stdio.cpp  stdio.hpp  web-beast.cpp  web-config.hpp.in  web-dispatch.cpp  web-dispatch.hpp  web.hpp
src/spoof/: README.md  main.cpp
test/: annotation-tests.cpp  annotation_tests.cpp  blot_and_compare.sh  infer-tests.cpp  infer_tests.cpp  jsonrpc-tests.cmake  regenerate-fixtures.sh  system-tests.cmake  system_tests.cmake  test_blot.cpp  test_config.h.in
test/api/: annotation-tests.cpp  infer-tests.cpp
test/cli/: system-tests.cmake
test/fixture/: compile_commands.json  fxt-clang-demangle.json  fxt-clang-preserve-library-functions.cpp  fxt-clang-preserve-library-functions.json  fxt-gcc-basic.json  fxt-gcc-demangle.json  fxt-gcc-errors.json  fxt-gcc-includes.cpp  fxt-gcc-includes.hpp  fxt-gcc-minimal.json  fxt-gcc-no-preserve-library-functions.json  fxt-gcc-preserve-directives.json  fxt-gcc-preserve-library-functions.json  fxt-gcc-still-pretty-basic.json  fxt_clang_demangle.json  fxt_clang_preserve_library_functions.json  fxt_gcc_basic.cpp  fxt_gcc_basic.json  fxt_gcc_demangle.json  fxt_gcc_errors.cpp  fxt_gcc_errors.json  fxt_gcc_includes.cpp  fxt_gcc_minimal.json  fxt_gcc_no_preserve_library_functions.json  fxt_gcc_preserve_directives.json  fxt_gcc_preserve_library_functions.json  fxt_gcc_still_pretty_basic.json  minimal.json  preserve_directives.json  test00.cpp  test00.json  test01.cpp  test01.json  test02.cpp  test02.json  test03.cpp  test03.json  test04.cpp  test04.json  test04_no_preserve.json  (+2 more)
test/fixture/clang-deep-hierarchy-2/: compile_commands.json  header.hpp
test/fixture/clang-demangle/: compile_commands.json  expected.json  source.cpp
test/fixture/clang-preserve-library-functions/: compile_commands.json  expected.json
test/fixture/gcc-basic/: expected.json
test/fixture/gcc-deep-hierarchy/: compile_commands.json  header.hpp  source-1.cpp  source-2.cpp
test/fixture/gcc-deep-hierarchy-2/: compile_commands.json  source.cpp
test/fixture/gcc-deep-hierarchy-2/inner/: header.hpp  hmmm.hpp
test/fixture/gcc-demangle/: expected.json
test/fixture/gcc-errors/: compile_commands.json  expected.json
test/fixture/gcc-header-woes/: compile_commands.json  header1.hpp  header2.hpp  source.cpp  utils.hpp
test/fixture/gcc-includes/: compile_commands.json  header.hpp  source.cpp
test/fixture/gcc-minimal/: compile_commands.json  expected.json  source.cpp
test/fixture/gcc-no-preserve-library-functions/: expected.json
test/fixture/gcc-preserve-directives/: compile_commands.json  expected.json
test/fixture/gcc-preserve-library-functions/: compile_commands.json  expected.json  source.cpp
test/fixture/gcc-still-pretty-basic/: compile_commands.json  expected.json
test/fixture/just-an-include-dir/: need-an-include-dir.hpp
test/jsonrpc/: test_annotate.py  test_basic.py  test_errors.py
test/server/: common.py  http_files.py  http_status.py  server-tests.cmake  server_tests.cpp  session_cache.py  session_cache_other_inference.py  session_cache_other_pipelines.py  session_errors.py  session_lifecycle.py  session_pipeline.py
test/tests/: annotation-tests.cpp  cli-tests.cmake  fixture.hpp  http-tests-beast.cpp  http-tests.cpp  http-tests.hpp  infer-tests.cpp  main.cpp  session-tests.cpp
test/util/: blot-and-compare.sh  regenerate-fixtures.sh
test/web-api/: pyproject.toml  test_http_files.py  test_http_status.py  test_ws_cache.py  test_ws_cache_other_inference.py  test_ws_cache_other_pipelines.py  test_ws_errors.py  test_ws_lifecycle.py  test_ws_pipeline.py  web-api-tests.cmake  web_tests_common.py
web/: index.html
